v3.6.2 (XXXX-XX-XX)
-------------------

* Fix bug in collection creation with distributeShardsLike.


v3.6.1 (2020-01-29)
-------------------

* Updated ArangoDB Starter to 0.14.13.

* Added HotBackup events into auditing.

* Internal statistics API now uses integer timestamps instead of doubles. The
  old behavior sometimes leads to failed requests because of parse errors
  which occurred in the internally used JavaScript joi library.

* Fixed issue #10896: Variables defined inside spliced subqueries would leak
  into following COLLECT ... INTO var operations.

* Fixed COLLECT not invalidating variables for following COLLECT ... INTO var
  operations.

* Removed an unnecessary and wrong request from within the Web UI to the
  `/_admin/cluster/health` API. This lead to unauthorized network calls.

* Allowed PHRASE function to process empty arrays without generating error.

* Add acquisition of system report to arangod instances.

* React dev mode now supports hot reload combined with proxy for development.

* Fix issue #10897, using COLLECT in a subquery could lead to unexpected and
  confusing error messages

* Fix potential nullptr dereference in view optimizer rule, when there were was
  a LIMIT outside of a FOR loop.

* Added missing "global" parameter in Swagger REST API documentation for some
  replication endpoints.

* Fixed an edge case in VelocyPack when the padding of a 1-byte offsetSize array
  is removed but the first few entries of the array contain a Slice of type
  None.

* Fix Foxxmaster failover retry loop to not spin forever and give up after a
  while.

* Fix "random" Valgrind "invalid free/delete" errors caused by usage of
  `alignas(64)` for shared_ptrs in the SupervisedScheduler.

* MoveShard to check, if target is in sync follower before promotion to leader.

* Fixed issue #10867: arangod based binaries lack product version info and icon
  on Windows

* Fixed internal traversal edge collection cache being filled up correctly.