@@ -43,20 +43,6 @@ function dumpTestSuite () {
   return {
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief set up
-////////////////////////////////////////////////////////////////////////////////
-
-    setUp : function () {
-    },
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief tear down
-////////////////////////////////////////////////////////////////////////////////
-
-    tearDown : function () {
-    },
-
-////////////////////////////////////////////////////////////////////////////////
 /// @brief test the empty collection
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -479,7 +465,12 @@ function dumpTestSuite () {
       assertEqual(1, db._analyzers.count());
       assertEqual(1, res.length);
       assertEqual(db._analyzers.toArray()[0], res[0]);
-    }
+    },
+
+    testJobsAndQueues : function() {
+      assertEqual("test", db._jobs.document("test")._key);
+      assertEqual("test", db._queues.document("test")._key);
+    },
   };
 }
 
