@@ -263,7 +263,19 @@
         }
       }
     });
-  } catch (err) { }
+  } catch (err) {}
+
+  // insert an entry into _jobs collection
+  try {
+    db._jobs.remove("test");
+  } catch (err) {}
+  db._jobs.insert({ _key: "test", status: "completed" });
+
+  // insert an entry into _queues collection
+  try {
+    db._queues.remove("test");
+  } catch (err) {}
+  db._queues.insert({ _key: "test" });
 
   // Install Foxx
   const fs = require('fs');
