@@ -1,6 +1,10 @@
 v3.6.2 (XXXX-XX-XX)
 -------------------
 
+* Include collections "_queues" and "_jobs" in dumps created by arangodump
+  in case the option `--include-system-collections` was set to true. Previously
+  these collections were always excluded from dumps.
+
 * Fix bug in collection creation with distributeShardsLike.
 
 
